# rog-daemon

./: .gitmodules  README.md  meson.build  meson.options
cli/: execute.hpp  fan_curve.cpp  meson.build  mux.cpp  panel_od.cpp  profile.cpp
daemon/: enums.hpp  main.cpp  meson.build  mux.cpp  panel_od.cpp  panel_od.hpp  profile.cpp  profile.hpp  rog-daemon.service  sysfs.cpp  sysfs.hpp
daemon/services/: dinit
scripts/: openrc  rog-fan-curve  rog-mux  rog-panel-od  rog-profile
src/: cli.cpp  enums.hpp  fan_curve.cpp  fan_curve.hpp  main.cpp  mux.cpp  mux.hpp  panel_od.cpp  panel_od.hpp  profile.cpp  profile.hpp  sysfs.hpp
